export postgres and install db client extension in vscode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,18 +9,14 @@
         "vscode": {
             "extensions": [
                 "mhutchie.git-graph",
-                "eamodio.gitlens"
+                "eamodio.gitlens",
+                "mtxr.sqltools-driver-pg",
+                "mtxr.sqltools"
             ]
         }
-    }
-    // Features to add to the dev container. More info: https://containers.dev/features.
-    // "features": {},
+    },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [5432],
-    // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "rustc --version",
-    // Configure tool-specific properties.
-    // "customizations": {},
-    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-    // "remoteUser": "root"
+    "forwardPorts": [
+        5432
+    ]
 }
