--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
             "username": "postgres",
             "password": "postgres"
         }
-    ]
+    ],
+    "rust-analyzer.server.extraEnv": {
+        "DATABASE_URL": "postgres://postgres:postgres@db:5432/milna"
+    }
 }
