--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { version = "1.0.69" }
+actix-web = { version = "4.3.1", features = ["macros"] }
+sqlx = { version = "0.6.2", features = [
+    "postgres",
+    "runtime-tokio-native-tls",
+    "chrono",
+] }
+chrono = { version = "0.4.23" }
