--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,5 +5,5 @@ FROM mcr.microsoft.com/devcontainers/rust:0-1-bullseye
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
    && apt-get -y install clang lld \
    && apt-get autoremove -y && apt-get clean -y
-
+USER vscode
 RUN cargo install sqlx-cli@0.6.2
