--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,4 @@ tokio = { version = "1.26.0", features = ["macros"] }
 serde_json = { version = "1.0.94" }
 serde = { version = "1.0.155", features = ["derive"] }
 env_logger = { version = "0.10.0" }
-[dev-dependencies]
+utoipa = { version = "3.1.2", features = ["actix_extras"] }
