--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ sqlx = { version = "0.6.2", features = [
     "postgres",
     "runtime-tokio-native-tls",
     "chrono",
+    "offline",
 ] }
 chrono = { version = "0.4.23" }
 futures = { version = "0.3.26" }
