--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,10 @@
     "vite": "^4.2.0"
   },
   "dependencies": {
-    "qrcode-generator": "^1.4.4"
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@material-ui/core": "^4.12.4",
+    "class-transformer": "^0.5.1",
+    "svelte-materialify": "^0.3.11"
   }
 }
