--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ serde = { version = "1.0.155", features = ["derive"] }
 env_logger = { version = "0.10.0" }
 utoipa = { version = "3.1.2", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }
+actix-cors = "0.6.4"
+actix-files = "0.6.2"
