--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ utoipa = { version = "3.1.2", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "3.1.1", features = ["actix-web"] }
 actix-cors = "0.6.4"
 actix-files = "0.6.2"
+fast_qr = { version = "0.8.5", features = ["image"] }
